# eda-learning

./: README.md  eda.ipynb  pyproject.toml
.kaggle/: kaggle.json.example
