[tool.poetry]
name = "eda-learning"
version = "0.1.0"
description = ""
authors = ["Rangga-PR <ranggaputraraharja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
warn = "^0.1.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
kagglehub = "^0.3.4"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
